# powerline-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  example_config.json  example_theme.json
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml
docs/: powershell-testing.md
examples/: minimalistic.rs  rainbow.rs  test_conf.rs
src/: colors.rs  config.rs  lib.rs  modules.rs  platform.rs  powerline.rs  terminal.rs  theme.rs  themes.rs  utils.rs
src/modules/: cargo.rs  cmd.rs  cmd_duration.rs  cwd.rs  duration.rs  exit_code.rs  git.rs  host.rs  jenv.rs  nvm.rs  pr.rs  pr_status.rs  python_env.rs  readonly.rs  sdkman_java.rs  shell_name.rs  short_cwd.rs  spacer.rs  time.rs  user.rs  venv.rs
src/modules/git/: gitoxide.rs  libgit.rs  process.rs
src/themes/: custom.rs  light.rs  rainbow.rs  simple.rs
tests/: default_config.rs  shell_rendering.rs
