[package]
name = "powerline"
version = "0.4.0"
authors = ["cirho <me@cirho.com>", "alxhill <me@alxhill.com>"]
edition = "2021"
description = "Configurable Powerline implementation in pure Rust."

[dependencies]
users = "0.11"
libc = "0.2"
hostname = "0.3"
git2 = { version = "0.18", optional = true, default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
duration-str = "0.11.2"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }

[features]
default = ["bare-shell", "libgit"]
bash-shell = []
bare-shell = []
zsh-shell = []
libgit = ["git2"]

[profile.release]
opt-level = 3
lto = true
debug = false
