[package]
name = "powerline_rs"
version = "0.5.0"
authors = ["alxhill <me@alxhill.com>", "cirho <me@cirho.com>"]
edition = "2021"
description = "Configurable Powerline implementation in pure Rust."

[dependencies]
users = "0.11"
libc = "0.2"
hostname = "0.3"
git2 = { version = "0.18", optional = true, default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }
chrono = "0.4.38"

[features]
default = ["libgit"]
libgit = ["git2"]

[profile.release]
opt-level = 3
lto = true
debug = false
strip = "debuginfo"
codegen-units = 1
panic = "abort"
